--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ nav {
 }
 
 .banner__card:nth-child(1) {
-  background-image: url("/banner-1.png");
+  background-image: url("/logo.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
