--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0)
     ),
-    url("/download.png");
+    url(".download.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -219,7 +219,7 @@ nav {
 }
 
 .banner__card:nth-child(3) {
-  background-image: url("/banner-2.png");
+  background-image: url("banner-2.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -288,7 +288,7 @@ nav {
   top: 0;
   left: 0;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("/feature-bg.png");
+    url(".feature-bg.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
