--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ nav {
 }
 
 .banner__card:nth-child(1) {
-  background-image:url(./banner-1.png);
+  background-image:url(./images/banner-1.png);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
